--- a/onYOURway.Client.WebApp/onYOURway.Client.WebApp.csproj
+++ b/onYOURway.Client.WebApp/onYOURway.Client.WebApp.csproj
@@ -40,7 +40,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Content Include="App\themes\vonMorgen\css\searchBox.css.map" />
+    <Content Include="App\themes\vonMorgen\css\searchBox.css.map">
+      <DependentUpon>searchBox.css</DependentUpon>
+    </Content>
     <Content Include="App\themes\vonMorgen\css\searchBox.less" />
     <None Include="Properties\PublishProfiles\w3.pubxml" />
     <None Include="Web.Debug.config">
@@ -97,7 +99,9 @@
     <Content Include="App\services\providers\routing-yours.js" />
     <Content Include="App\services\storage.js" />
     <Content Include="App\services\tell.js" />
-    <Content Include="App\themes\vonMorgen\css\searchBox.css" />
+    <Content Include="App\themes\vonMorgen\css\searchBox.css">
+      <DependentUpon>searchBox.less</DependentUpon>
+    </Content>
     <Content Include="index.vonMorgen.html" />
     <Content Include="Tests\Api\location\regionTest.js" />
     <Content Include="Tests\App\components\searchBox-componentTest.js" />
