refactoring location.js: make remaining facade / interface in location.js smaller, further reduce dependencies and make more variables private. temporary comments in location.js (what is used where) will be removed after refactoring is complete

--- a/onYOURway.Client.WebApp/onYOURway.Client.WebApp.csproj
+++ b/onYOURway.Client.WebApp/onYOURway.Client.WebApp.csproj
@@ -43,12 +43,12 @@
     <Content Include="App\services\api\apiClient.js" />
     <Content Include="App\services\api\searchSuggestions.js" />
     <Content Include="App\services\api\tags.js" />
-    <Content Include="App\services\map\fiveMinuteDistanceLayer.js" />
     <Content Include="App\services\map\mapAdapter.js" />
     <Content Include="App\services\map\placesLayer.js" />
     <Content Include="App\services\map\pointerLayer.js" />
     <Content Include="App\services\map\regionLayer.js" />
     <Content Include="App\services\map\routingLayer.js" />
+    <Content Include="App\services\map\settings.js" />
     <Content Include="App\services\map\siteCollectorLayer.js" />
     <Content Include="App\services\map\tileLayer.js" />
     <Content Include="App\themes\vonMorgen\css\searchBox.css.map">
