wip: refactoring datamodel

--- a/onYOURway.Server.Net/onYOURway.Server.Net.csproj
+++ b/onYOURway.Server.Net/onYOURway.Server.Net.csproj
@@ -215,27 +215,27 @@
     <Compile Include="Models\Account\AccountViewModels.cs" />
     <Compile Include="Models\Location\Entry.cs" />
     <Compile Include="Models\Location\Event.cs" />
+    <Compile Include="Models\Location\Feature.cs" />
     <Compile Include="Models\Location\Realm.cs" />
     <Compile Include="Models\Location\Country.cs" />
     <Compile Include="Models\DbGeographyConverter.cs" />
-    <Compile Include="Models\Location\HasTag.cs" />
+    <Compile Include="Models\Location\EntryTag.cs" />
     <Compile Include="Models\Location\Location.cs" />
-    <Compile Include="Models\Location\LocationAlias.cs" />
-    <Compile Include="Models\Location\LocationForeignId.cs" />
-    <Compile Include="Models\Location\LocationLink.cs" />
+    <Compile Include="Models\Location\EntryLocalization.cs" />
+    <Compile Include="Models\Location\EntryReference.cs" />
+    <Compile Include="Models\Location\EntryLink.cs" />
     <Compile Include="Models\Location\Tag.cs" />
     <Compile Include="Models\Location\TagName.cs" />
     <Compile Include="Models\Message.cs" />
     <Compile Include="Models\Results\Place.cs" />
     <Compile Include="Models\Results\SearchSuggestion.cs" />
     <Compile Include="Models\_onYOURwayDbContext.cs" />
-    <Compile Include="Models\Location\Partner.cs" />
+    <Compile Include="Models\Location\ExternalSystem.cs" />
     <Compile Include="Models\Location\ProductSuggestion.cs" />
     <Compile Include="Models\Location\Region.cs" />
-    <Compile Include="Models\Location\RegionAlias.cs" />
     <Compile Include="Models\Location\RegionView.cs" />
     <Compile Include="Models\Location\Street.cs" />
-    <Compile Include="Models\Location\TagIsA.cs" />
+    <Compile Include="Models\Location\TagRelation.cs" />
     <Compile Include="Models\Account\UserProfile.cs" />
     <Compile Include="Models\_CustomConventions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
