--- a/onYOURway.Client.WebApp/onYOURway.Client.WebApp.csproj
+++ b/onYOURway.Client.WebApp/onYOURway.Client.WebApp.csproj
@@ -40,8 +40,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Content Include="App\bindingHandlers\places-bindingHandler.js" />
+    <Content Include="App\components\tagSelection-component.html" />
+    <Content Include="App\components\tagSelection-component.js" />
     <Content Include="App\mainMin.js" />
     <Content Include="App\services\api\apiClient.js" />
+    <Content Include="App\services\api\placeComparators.js" />
+    <Content Include="App\services\api\places.js" />
+    <Content Include="App\services\api\placeSearch.js" />
     <Content Include="App\services\api\searchSuggestions.js" />
     <Content Include="App\services\api\tags.js" />
     <Content Include="App\services\map\mapAdapter.js" />
@@ -52,9 +58,6 @@
     <Content Include="App\services\map\settings.js" />
     <Content Include="App\services\map\siteCollectorLayer.js" />
     <Content Include="App\services\map\tileLayer.js" />
-    <Content Include="App\themes\vonMorgenMin\css\searchBox.css">
-      <DependentUpon>searchBox.less</DependentUpon>
-    </Content>
     <Content Include="App\themes\vonMorgenMin\css\vonMorgen.css">
       <DependentUpon>vonMorgen.less</DependentUpon>
     </Content>
@@ -64,15 +67,19 @@
       <DependentUpon>searchBox.css</DependentUpon>
     </Content>
     <Content Include="App\themes\vonMorgen\css\searchBox.less" />
-    <Content Include="App\themes\vonMorgenMin\css\searchBox.css.map">
-      <DependentUpon>searchBox.css</DependentUpon>
-    </Content>
-    <Content Include="App\themes\vonMorgenMin\css\searchBox.less" />
     <Content Include="App\themes\vonMorgenMin\css\vonMorgen.css.map">
       <DependentUpon>vonMorgen.css</DependentUpon>
     </Content>
     <Content Include="App\themes\vonMorgenMin\css\vonMorgen.less" />
-    <Content Include="App\themes\vonMorgenMin\css\siteCollector.less" />
+    <Content Include="App\themes\vonMorgenMin\css\components\searchBox.less" />
+    <Content Include="App\themes\vonMorgenMin\css\components\tagSelection.less" />
+    <Content Include="App\themes\vonMorgenMin\css\home.less" />
+    <Content Include="App\themes\vonMorgenMin\css\my\siteCollector.less" />
+    <Content Include="App\themes\vonMorgenMin\css\searchResults\placePreview.less" />
+    <Content Include="App\themes\vonMorgenMin\css\searchResults\placesList.less" />
+    <Content Include="App\themes\vonMorgenMin\css\_map.less" />
+    <Content Include="App\themes\vonMorgenMin\css\_nav.less" />
+    <Content Include="App\themes\vonMorgenMin\css\_responsive.less" />
     <None Include="Properties\PublishProfiles\w3.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -92,7 +99,6 @@
     <Content Include="App\bindingHandlers\textDate-bindingHandler.js" />
     <Content Include="App\bindingHandlers\timeslider-bindingHandler.js" />
     <Content Include="App\bindingHandlers\typeahead-bindingHandler.js" />
-    <Content Include="App\bindingHandlers\ventures-bindingHandler.js" />
     <Content Include="App\bindingHandlers\_instance-bindingProvider.js" />
     <Content Include="App\components\searchBox-component.html" />
     <Content Include="App\components\searchBox-component.js" />
@@ -131,15 +137,24 @@
     <Content Include="App\themes\vonMorgen\css\searchBox.css">
       <DependentUpon>searchBox.less</DependentUpon>
     </Content>
+    <Content Include="App\themes\vonMorgen\images\logo.jpg" />
+    <Content Include="App\themes\vonMorgen\images\logo.png" />
+    <Content Include="App\themes\vonMorgen\images\logo66.png" />
+    <Content Include="App\themes\vonMorgen\images\logo73.png" />
+    <Content Include="App\themes\vonMorgen\images\logoanimation90.gif" />
     <Content Include="App\views\vonMorgenMin\home.html" />
     <Content Include="App\views\vonMorgenMin\home.js" />
     <Content Include="App\views\vonMorgenMin\onlyMap.html" />
     <Content Include="App\views\vonMorgenMin\onlyMap.js" />
+    <Content Include="App\views\vonMorgenMin\searchResults.html" />
+    <Content Include="App\views\vonMorgenMin\searchResults.js" />
     <Content Include="App\views\vonMorgenMin\_map.html" />
     <Content Include="App\views\vonMorgenMin\_map.js" />
     <Content Include="App\views\vonMorgenMin\_nav.html" />
     <Content Include="App\views\vonMorgenMin\_nav.js" />
     <Content Include="App\_libraries\less.min.js" />
+    <Content Include="App\_styles\font-awesome.min.css" />
+    <Content Include="Content\vonMorgen\vegetables.jpg" />
     <Content Include="index.vonMorgen.html" />
     <Content Include="Tests\Api\location\regionTest.js" />
     <Content Include="Tests\App\components\searchBox-componentTest.js" />
@@ -583,7 +598,6 @@
     <Folder Include="App\themes\onYOURway\images\" />
     <Folder Include="App\views\onYOURway\" />
     <Folder Include="Content\onYOURway\images\" />
-    <Folder Include="Content\vonMorgen\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
