Data Model: wip: refactor lookups and add minor tweaks to model

--- a/onYOURway.Server.Net/WebConfig.base.config
+++ b/onYOURway.Server.Net/WebConfig.base.config
@@ -22,8 +22,10 @@
 		<add key="EmailsFrom" value="YOUR_FROM_EMAIL_ADDRESS"/>
 	</appSettings>
 	<connectionStrings>
-		<add name="onYOURway" connectionString="data source=localhost;Initial Catalog=onYOURway;Trusted_Connection=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-		<add name="onYOURwayEntities" connectionString="metadata=res://*/Models.onYOURway.csdl|res://*/Models.onYOURway.ssdl|res://*/Models.onYOURway.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;Initial Catalog=onYOURway;Trusted_Connection=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
+		<add name="DefaultConnection"
+			providerName="System.Data.SqlClient"
+			connectionString="data source=localhost;Initial Catalog=onYOURway;Trusted_Connection=True;MultipleActiveResultSets=True"
+			/>
 	</connectionStrings>
 
 	<system.diagnostics>
